feat: 사용자 관련 API 구현
- 자신의 정보 조회
- 사용자 목록 전체 조회
