# src/main/resources/static/docs/swagger/openapi3.yaml
@@ -139,6 +139,62 @@ paths:
       responses:
         "200":
           description: "200"
+  /user/members:
+    get:
+      tags:
+      - 사용자
+      summary: 사용자 목록 조회
+      description: 사용자 목록 조회
+      operationId: member-rest-controller-test/사용자 목록 조회
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user-members-1036020352'
+              examples:
+                member-rest-controller-test/사용자 목록 조회:
+                  value: |-
+                    [ {
+                      "id" : 1,
+                      "name" : "홍길동",
+                      "email" : "adminA@sat.com",
+                      "createdDateTime" : "2024-01-01T07:00:00"
+                    }, {
+                      "id" : 2,
+                      "name" : "홍동길",
+                      "email" : "adminB@sat.com",
+                      "createdDateTime" : "2024-01-01T07:00:00"
+                    }, {
+                      "id" : 3,
+                      "name" : "홍길돔",
+                      "email" : "adminC@sat.com",
+                      "createdDateTime" : "2024-01-01T07:00:00"
+                    } ]
+  /user/members/me:
+    get:
+      tags:
+      - 사용자
+      summary: 사용자 목록 조회
+      description: 사용자 목록 조회
+      operationId: member-rest-controller-test/자신의 정보 조회
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user-members-me-115117825'
+              examples:
+                member-rest-controller-test/자신의 정보 조회:
+                  value: |-
+                    {
+                      "id" : 1,
+                      "name" : "홍길동",
+                      "nickname" : "홍길동",
+                      "email" : "admin@sat.com"
+                    }
 components:
   schemas:
     board-articles-1499844002:
@@ -179,6 +235,26 @@ components:
         content:
           type: string
           description: 게시글 내용
+    user-members-me-115117825:
+      required:
+      - email
+      - id
+      - name
+      - nickname
+      type: object
+      properties:
+        nickname:
+          type: string
+          description: 닉네임
+        name:
+          type: string
+          description: 이름
+        id:
+          type: number
+          description: 사용자 ID
+        email:
+          type: string
+          description: 이메일
     board-articles-1450587914:
       required:
       - categoryId
@@ -195,3 +271,25 @@ components:
         content:
           type: string
           description: 게시글 내용
+    user-members-1036020352:
+      type: array
+      items:
+        required:
+        - createdDateTime
+        - email
+        - id
+        - name
+        type: object
+        properties:
+          name:
+            type: string
+            description: 이름
+          createdDateTime:
+            type: string
+            description: 가입 시간
+          id:
+            type: number
+            description: 사용자 ID
+          email:
+            type: string
+            description: 이메일
